Fri Feb 03 17:22:10 MST 2006  Trevor Fields  <fields_t@ociweb.com>

        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/DataWriterImpl.cpp:
        * dds/InfoRepo/DCPS_IR_Domain.h:

          Additional BIT macros.

        * tests/DCPS/FooTest5/subscriber.cpp:

          Fix virtual call on windows with DOC group.
          We were passing a listener impl from the stack to the
          poa which caused the virtual call at shutdown.

Mon Jan 30 07:31:28 2006  Chad Elliott  <elliott_c@ociweb.com>

        * dds/DCPS/transport/simpleUDP/SimpleUdpConfiguration.cpp:

          Call a base class method through the 'this' pointer to avoid
          problems with VC6.

Fri Jan 27 14:04:05 2006  Paul Calabrese  <calabrese_p@ociweb.com>

        * dds/InfoRepo/DCPSInfoRepo.cpp:

          Change the name of the POA to "InfoRepo".

Fri Jan 27 13:54:43 2006  Paul Calabrese  <calabrese_p@ociweb.com>

        * dds/DCPS/Service_Participant.cpp:

          Add support for -DCPSInfoRepo.  This is identical in action to
          -DCPSInfo (which is essentially deprecated).  I think this is
          more consistent.

        * dds/InfoRepo/DCPSInfoRepo.cpp:

          Make the Info Repo's object reference persistent.  This makes
          the object references consistent (as long as fixed endpoints are
          specified) and simplifies deployment.

        * tests/transport/udp_simple_n/PubDriver.cpp:
        * tests/transport/udp_simple_n/SubDriver.cpp:
        * tests/transport/udp_simple_n/udp.conf:

          Change this test to work with a static DDS build.

        * dds/DCPSInfo.idl:

          Removed this file.  It appears obsolete (virtually identical to
          DdsDcpsInfo.idl).

Thu Jan 26 09:36:24 2006  Paul Calabrese  <calabrese_p@ociweb.com>

        * dds/InfoRepo/DCPSInfoRepo.mpc:
        * dds/InfoRepo/DCPSInfoRepo.cpp:

          Modified the DCPSInfoRepo process so it registers the
          Info Repo object using a simple object key via the