@@ -1,3 +1,9 @@
+Thu Feb  9 22:11:11 2006  Paul Calabrese  <calabrese_p@ociweb.com>
+
+        * dds/DCPS/dcps_export.h:
+
+          Fix export macros for windows static builds.
+
 Fri Feb 03 17:22:10 MST 2006  Trevor Fields  <fields_t@ociweb.com>
 
         * dds/DCPS/DataReaderImpl.cpp:
